// Vitest Snapshot v1

exports[`Table component > renders 1`] = `
<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-gWDrUk-size-md c-cwQMhQ-fofZjp-corners-round c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-jEDwTF-theme-primaryDark"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-GSaiK"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-gdcSSw-striped-true"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component > renders with a themed header 1`] = `
<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-gWDrUk-size-md c-cwQMhQ-fofZjp-corners-round c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-gmYsCp-theme-primary"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-GSaiK"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-gdcSSw-striped-true"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component > renders with size set to lg 1`] = `
<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-goJwcl-size-lg c-cwQMhQ-fofZjp-corners-round c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-jEDwTF-theme-primaryDark"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-GSaiK"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-gdcSSw-striped-true"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component > renders with square corners 1`] = `
<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-gWDrUk-size-md c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-jEDwTF-theme-primaryDark"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-GSaiK"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-gdcSSw-striped-true"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;
